--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h3 onclick="window.location='./admin.php'">CYCLEWRITE.COM</h3>
   </div>
 
-  <p>This website is now a lesson in data recovery.</p>
+  <p>Cyclewrite.com is currently in archive mode.</p>
   <div class="main-header-topnav">
     <div class="navlink">
       <a href="#">Home</a>
