css and static articles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
+  <link rel="icon" 
+      type="image/png" 
+      href="cw-ico-32.png" />
   <link rel="stylesheet" href="cw.css">
   <title>CYCLEWRITE.COM</title>
   <script>
@@ -16,10 +19,10 @@
 <header>
 <div class="main-header-container">
   <div class="main-header-logo">
-    <h3 onclick="window.location='./admin.php'">CYCLEWRITE.COM</h3>
+    <h3 onclick="window.location='/login/login.php'">CYCLEWRITE.COM</h3>
   </div>
 
-  <p>Cyclewrite.com is currently in archive mode.</p>
+  <p>Cyclewrite is currently in archive mode.</p>
   <div class="main-header-topnav">
     <div class="navlink">
       <a href="#">Home</a>
