updating sidebar to let people know what's up.

--- a/index.html
+++ b/index.html
@@ -155,18 +155,36 @@
   </div>
 
   <div class="side-feed-container">
-    <a href="view.php?entry=546">
+    <a href="#">
       <div class="side-feed-entry-header">
-        <h5>Updates</h5>
+        <h5>What's Happening at Cyclewrite?</h5>
       </div>
       <div class="side-feed-content-container">
         <div class="side-feed-snippet">
-          <p>Check out the latest updates on Cyclewrite.com</p>
+          <p>Thanks for dropping by!</p>
+          <p>Things are under construction a bit after some data loss.</p>
+          <p>Here's what's new:</p>
           <ul>
-            <li>Added new entry: "Playing in the Mud: A Road Cyclist's First MTB Race"</li>
             <li>Feed layout updated</li>
-            <li>JavaScript banner image selection</li>
+            <li>JavaScript banner cycling</li>
           </ul>
+          <p>Here's what's in the works:</p>
+          <ul>
+            <li>New simplified blog entry forms</li>
+            <li>Some embedding options for Strava content</li>
+            <li>GPX Import with data presentation</li>
+            <li>New styling! Things need to be prettier</li>
+          </ul>
+        </div>
+      </div>
+    </a>
+    <a href="#">
+      <div class="side-feed-entry-header">
+        <h5>What is Cyclewrite?</h5>
+      </div>
+      <div class="side-feed-content-container">
+        <div class="side-feed-snippet">
+          <p>Cyclewrite started back in 2015ish as a project to learn PHP, SQL, JavaScript, HTML, and CSS. The idea was to develop a blogging platform for adventure cyclists to post their stories of adventure. While Cyclewrite still remains a learning project, I do plan on having it's functionality fully restored in the near future! I can't wait to read about what bike adventures are happening and hope you're ready to write!</p> 
         </div>
       </div>
     </a>
