layout and field generation/focus

--- a/scratchpad/write-grid.html
+++ b/scratchpad/write-grid.html
@@ -6,12 +6,13 @@
     <script src="write.js"></script>
 </head>
 <body>
-
-    <div id="scratchpad" class="scratchpad"></div>
+    <div id="scratchpad" class="scratchpad">
+    <div id="sheet" class="sheet"></div>
     <div id="contentSelector" class="content-selector"></div>
-   
+</div>
     <button id="newMultiBox">multi box</button>
     <button id="newTextArea">text</button>
+
 
 </body>
 </html>
